fix table's overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -955,6 +955,7 @@ section { position: relative; z-index: 1; }
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
+    min-width: 800px;
 }
 
 .gallery-item {
@@ -1753,7 +1754,7 @@ section { position: relative; z-index: 1; }
     }
 
     .gallery-grid {
-        grid-template-columns: 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr; */
         gap: 8px;
     }
 
